// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Select As Form Item 1`] = `
<div
  style="height:310px"
>
  
    
  <div
    class="fd-form-item"
  >
    
        
    <div
      class="fd-popover"
    >
      
            
      <div
        class="fd-popover__control"
      >
        
                
        <div
          class="fd-select"
        >
          
                    
          <div
            aria-controls="h031TOM5"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="fd-select__control"
            onclick="onControlClick('h0C6B625');"
            role="combobox"
            tabindex="0"
          >
            
                        
            <span
              class="fd-select__text-content"
            >
              Select
            </span>
            
                        
            <span
              class="fd-button fd-button--transparent fd-select__button"
            >
              
                            
              <i
                class="sap-icon--slim-arrow-down"
              />
               
                        
            </span>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
            
      <div
        aria-hidden="true"
        class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
        id="h0C6B625"
      >
        
                
        <ul
          aria-labelledby="f45564A57"
          class="fd-list fd-list--dropdown"
          id="h031TOM5"
          role="listbox"
        >
          
                    
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
                    
            <span
              class="fd-list__title"
            >
              
                        List item 1 List item 1 List item 1 List item 1 List item 1 List item 1
                        List item 1 List item 1 List item 1 List item 1 List item 1 List item 1
                        List item 1 List item 1 List item 1 List item 1
                    
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="option"
            tabindex="-1"
          >
            
                    
            <span
              class="fd-list__title"
            >
              List item 2
            </span>
            
                
          </li>
          
                    
          <li
            class="fd-list__item"
            role="option"
            tabindex="-1"
          >
            
                    
            <span
              class="fd-list__title"
            >
              List item 3
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="option"
            tabindex="-1"
          >
            
                    
            <span
              class="fd-list__title"
            >
              List item 4
            </span>
            
                    
          </li>
          
                
        </ul>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Select Blank 1`] = `
<div
  style="height: 250px"
>
  
    
  <label
    class="fd-form-label"
    id="h45336F3"
  >
    
        Select with Blank Option
    
  </label>
  
    
  <br />
  
    
  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <div
        class="fd-select"
      >
        
            
        <div
          aria-controls="h2A6CEW2"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control"
          onclick="onControlClick('h0B6A326');"
          role="combobox"
          tabindex="0"
        >
          
                
          <span
            class="fd-select__text-content"
          />
          
                
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                    
            <i
              class="sap-icon--slim-arrow-down"
            />
             
                
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="h0B6A326"
    >
      
        
      <ul
        aria-labelledby="h45336F3"
        class="fd-list fd-list--dropdown"
        id="h2A6CEW2"
        role="listbox"
        tabindex="-1"
      >
        
            
        <li
          aria-label="None selected"
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
            
          <span
            class="fd-list__title"
          >
            
            
          </span>
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 1
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 2
          </span>
          
        
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 3
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 4
          </span>
          
            
        </li>
        
        
      </ul>
      
    
    </div>
    
    
  </div>
  
    
  <br />
  
    
  <br />
  
    
  <label
    class="fd-form-label"
    id="h45336F4"
  >
    
        Select with Blank Option - Compact Mode
    
  </label>
  
    
  <br />
  
    
  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <div
        class="fd-select fd-select--compact"
      >
        
            
        <div
          aria-controls="r57YU8P5"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control"
          onclick="onControlClick('h0B6A327');"
          role="combobox"
          tabindex="0"
        >
          
                
          <span
            class="fd-select__text-content"
          />
          
                
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                    
            <i
              class="sap-icon--slim-arrow-down"
            />
             
                
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="h0B6A327"
    >
      
        
      <ul
        aria-labelledby="h45336F4"
        class="fd-list fd-list--dropdown fd-list--compact"
        id="r57YU8P5"
        role="listbox"
        tabindex="-1"
      >
        
            
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
            
          <span
            class="fd-list__title"
          >
            
            
          </span>
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 2
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 3
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 4
          </span>
          
            
        </li>
        
        
      </ul>
      
    
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Select Compact 1`] = `
<div
  style="height: 200px"
>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <div
        class="fd-select fd-select--compact"
      >
        
                
        <div
          aria-controls="h037CLM5"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control"
          onclick="onControlClick('h0C6A326');"
          role="combobox"
          tabindex="0"
        >
          
                    
          <span
            class="fd-select__text-content"
          >
            Select
          </span>
          
                    
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                        
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                    
          </span>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="h0C6A326"
    >
      
            
      <ul
        aria-labelledby="f45564A58"
        class="fd-list fd-list--dropdown fd-list--compact"
        id="h037CLM5"
        role="listbox"
        tabindex="-1"
      >
        
                
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                
          <span
            class="fd-list__title"
          >
            
                    Very long text, Very long text, Very long text, Very long text, Very long text, Very long text, Very long text, Very long text, Very long text, Very long text, Very long text
                    Very long text, Very long text, Very long text
                
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 2
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 3
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 4
          </span>
          
                
        </li>
        
            
      </ul>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Select Cozy 1`] = `
<div
  style="height: 200px"
>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <div
        class="fd-select"
      >
        
                
        <div
          aria-controls="h031XCM5"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control"
          onclick="onControlClick('h0C6A325');"
          role="combobox"
          tabindex="0"
        >
          
                    
          <span
            class="fd-select__text-content"
          >
            Select
          </span>
          
                    
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                        
            <i
              class="sap-icon--slim-arrow-down"
            />
             
                    
          </span>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="h0C6A325"
    >
      
            
      <ul
        aria-labelledby="f45564A57"
        class="fd-list fd-list--dropdown"
        id="h031XCM5"
        role="listbox"
      >
        
                
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 1
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 2
          </span>
          
            
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 3
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 4
          </span>
          
                
        </li>
        
            
      </ul>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Select Disabled 1`] = `
<div
  class="fd-popover"
>
  
    
  <div
    aria-disabled="true"
    class="fd-popover__control"
  >
    
        
    <div
      class="fd-select"
    >
      
            
      <div
        aria-disabled="true"
        aria-expanded="false"
        aria-haspopup="false"
        class="fd-select__control"
        role="combobox"
      >
        
                
        <span
          class="fd-select__text-content"
        >
          Select
        </span>
        
                
        <span
          class="fd-button fd-button--transparent fd-select__button"
        >
          
                    
          <i
            class="sap-icon--slim-arrow-down"
          />
          
                
        </span>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Select Expanded 1`] = `
<div
  class="fd-popover"
>
  
  
  <div
    class="fd-popover__control"
  >
    
     
    <div
      class="fd-select"
    >
      
         
      <div
        aria-controls="h0C6A3245234"
        aria-expanded="true"
        aria-haspopup="listbox"
        class="fd-select__control"
        role="combobox"
        tabindex="0"
      >
        
             
        <span
          class="fd-select__text-content"
        >
          Select
        </span>
        
             
        <span
          class="fd-button fd-button--transparent fd-select__button"
        >
          
                
          <i
            class="sap-icon--slim-arrow-down"
          />
           
            
        </span>
        
         
      </div>
      
      
    </div>
    
  
  </div>
  
  
  <div
    aria-hidden="false"
    class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
    id="h0C6A325"
  >
    
     
    <ul
      aria-labelledby="h0C6A3245234"
      class="fd-list fd-list--dropdown"
      role="listbox"
    >
      
        
      <li
        aria-selected="true"
        class="fd-list__item is-selected"
        role="option"
        tabindex="0"
      >
        
           
        <span
          class="fd-list__title"
        >
          List item 1
        </span>
        
        
      </li>
      
        
      <li
        class="fd-list__item"
        role="option"
        tabindex="-1"
      >
        
           
        <span
          class="fd-list__title"
        >
          List item 2
        </span>
        
       
      </li>
      
        
      <li
        class="fd-list__item"
        role="option"
        tabindex="-1"
      >
        
           
        <span
          class="fd-list__title"
        >
          List item 3
        </span>
        
        
      </li>
      
        
      <li
        class="fd-list__item"
        role="option"
        tabindex="-1"
      >
        
           
        <span
          class="fd-list__title"
        >
          List item 4
        </span>
        
        
      </li>
      
     
    </ul>
    
  
  </div>
  

</div>
`;

exports[`Storyshots Components/Select Item Grouping 1`] = `
<div
  style="height: 450px"
>
  
    
  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <div
        class="fd-select"
      >
        
            
        <div
          aria-controls="f34HLM5G"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control"
          onclick="onControlClick('h09GDGG325');"
          role="combobox"
          tabindex="0"
        >
          
                
          <span
            class="fd-select__text-content"
          >
            Select Ingredient
          </span>
          
                
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                    
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
      id="h09GDGG325"
    >
      
            
      <ul
        aria-labelledby="g45464A50"
        class="fd-list fd-list--dropdown"
        id="f34HLM5G"
        role="listbox"
        tabindex="-1"
      >
        
                
        <li
          class="fd-list__group-header"
        >
          
                    Fruits
                
        </li>
        
                
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Apple
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Orange
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Banana
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Kiwi
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__group-header"
        >
          
                    Vegetables
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Tomato
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Onion
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Spinach
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Potato
          </span>
          
                
        </li>
        
            
      </ul>
      
    
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Select Match Select Popover Body Size 1`] = `
<div
  style="height: 250px"
>
  
    
  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <div
        class="fd-select"
      >
        
            
        <div
          aria-controls="wGH468IL"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control"
          onclick="onControlClick('h0GTKE325');"
          role="combobox"
          tabindex="0"
        >
          
                
          <span
            class="fd-select__text-content"
          >
            Much Longer than Usual
          </span>
          
                
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                    
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
      id="h0GTKE325"
    >
      
        
      <ul
        aria-labelledby="g4546C40"
        class="fd-list fd-list--dropdown"
        id="wGH468IL"
        role="listbox"
        tabindex="-1"
      >
        
            
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 1
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            A1
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 2
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            A2
          </span>
          
        
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 3
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            A3
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 4
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            A4
          </span>
          
            
        </li>
        
        
      </ul>
      
    
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Select Mobile Mode 1`] = `
<div
  class="fd-dialog fd-dialog-docs-static fd-select-docs-max-height fd-dialog--active"
  id="select-dialog-example"
>
  
    
  <div
    class="fd-dialog__content"
  >
    
        
    <header
      class="fd-dialog__header fd-bar fd-bar--header-with-subheader"
    >
      
            
      <div
        class="fd-bar__left"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <h3
            class="fd-dialog__title"
          >
            
                        
            <span
              class="fd-select__text-content"
            >
              Select Ingredient
            </span>
            
                    
          </h3>
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="close"
            class="fd-button fd-button--transparent"
            tabindex="-1"
          >
            
                        
            <i
              class="sap-icon--decline"
            />
            
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </header>
    
        
    <div
      class="fd-dialog__body fd-dialog__body--no-vertical-padding"
    >
      
            
      <div
        aria-live="assertive"
        class="fd-list__message fd-list__message--information"
        role="alert"
      >
        Choose one item
      </div>
      
            
      <ul
        class="fd-list fd-list--has-message fd-list--dropdown fd-list--compact"
        role="listbox"
      >
        
                
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                   
          <span
            class="fd-list__title"
          >
            Apple
          </span>
          
               
        </li>
        
               
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                   
          <span
            class="fd-list__title"
          >
            Orange
          </span>
          
               
        </li>
        
               
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                   
          <span
            class="fd-list__title"
          >
            Banana
          </span>
          
               
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                   
          <span
            class="fd-list__title"
          >
            Kiwi
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Tomato
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Onion
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Spinach
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <span
            class="fd-list__title"
          >
            Potato
          </span>
          
                
        </li>
        
            
      </ul>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Select No Wrapping 1`] = `
<div
  style="height: 200px"
>
  
    
  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <div
        class="fd-select fd-select--compact"
      >
        
            
        <div
          aria-controls="t53GL7U8"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control"
          onclick="onControlClick('h0GZH2325');"
          role="combobox"
          tabindex="0"
        >
          
                
          <span
            class="fd-select__text-content"
          >
            Select
          </span>
          
                
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                    
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="h0GZH2325"
    >
      
        
      <ul
        aria-labelledby="g45464B40"
        class="fd-list fd-list--dropdown fd-list--compact"
        id="t53GL7U8"
        role="listbox"
        tabindex="-1"
      >
        
            
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
            
          <span
            class="fd-list__title fd-list__title--no-wrap"
          >
            
                Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text 
            
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            A1
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 2
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            A2
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 3
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            A3
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 4
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            A4
          </span>
          
            
        </li>
        
        
      </ul>
      
    
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Select Readonly 1`] = `
<div
  class="fd-popover"
>
  
    
  <div
    class="fd-popover__control"
  >
    
        
    <div
      class="fd-select"
    >
      
            
      <div
        aria-expanded="false"
        aria-haspopup="false"
        aria-label="Select"
        aria-readonly="true"
        class="fd-select__control is-readonly"
        role="combobox"
        tabindex="0"
      >
        
              
        <span
          class="fd-select__text-content"
        >
          Selected Item 2
        </span>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Select Semantic States 1`] = `
<div
  style="height: 650px"
>
  
    
  <label
    class="fd-form-label"
    id="a4546C40"
  >
    
        Success Select Example
    
  </label>
  
    
  <br />
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <div
        class="fd-select"
      >
        
                
        <div
          aria-controls="s34GLW8I"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control is-success"
          onclick="onControlClick('h07jjhYH');"
          role="combobox"
          tabindex="0"
        >
          
                    
          <span
            class="fd-select__text-content"
          >
            Success
          </span>
          
                    
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                        
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                    
          </span>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="h07jjhYH"
    >
      
            
      <div
        aria-live="assertive"
        class="fd-list__message fd-list__message--success"
        role="alert"
      >
        Success message
      </div>
      
            
      <ul
        aria-labelledby="a4546C40"
        class="fd-list fd-list--has-message fd-list--dropdown fd-list--compact"
        id="s34GLW8I"
        role="listbox"
        tabindex="-1"
      >
        
                
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                
          <span
            class="fd-list__title"
          >
            
                    List Item 1
                
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A1
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 2
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A2
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 3
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A3
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 4
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A4
          </span>
          
                
        </li>
        
            
      </ul>
      
        
    </div>
    
    
  </div>
  
    
  <span
    class="fd-form-message fd-form-message--static fd-form-message--success"
  >
    Success message
  </span>
  

    
  <br />
  
    
  <br />
  
    
  <br />
  
    
  <label
    class="fd-form-label"
    id="b4546C40"
  >
    
        Error Select Example
    
  </label>
  
    
  <br />
  
    
  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <div
        class="fd-select"
      >
        
            
        <div
          aria-controls="e36GLS1W"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control is-error"
          onclick="onControlClick('h07j9978H');"
          role="combobox"
          tabindex="0"
        >
          
                
          <span
            class="fd-select__text-content"
          >
            Error
          </span>
          
                    
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                        
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                    
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="h07j9978H"
    >
      
            
      <div
        aria-live="assertive"
        class="fd-list__message fd-list__message--error"
        role="alert"
      >
        Error message
      </div>
      
            
      <ul
        aria-labelledby="b4546C40"
        class="fd-list fd-list--has-message fd-list--dropdown fd-list--compact"
        id="e36GLS1W"
        role="listbox"
        tabindex="-1"
      >
        
            
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                
          <span
            class="fd-list__title"
          >
            
                    List Item 1
                
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A1
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 2
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A2
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 3
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A3
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 4
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A4
          </span>
          
            
        </li>
        
            
      </ul>
      
    
    </div>
    
    
  </div>
  
    
  <span
    class="fd-form-message fd-form-message--static fd-form-message--error"
  >
    Error message
  </span>
  

    
  <br />
  
    
  <br />
  
    
  <br />
  
    
  <label
    class="fd-form-label"
    id="b45336C4"
  >
    
        Warning Select Example
    
  </label>
  
    
  <br />
  
    
  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <div
        class="fd-select"
      >
        
            
        <div
          aria-controls="s490DG4M"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control is-warning"
          onclick="onControlClick('h07j998hhH');"
          role="combobox"
          tabindex="0"
        >
          
                
          <span
            class="fd-select__text-content"
          >
            Warning
          </span>
          
                    
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                        
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                    
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="h07j998hhH"
    >
      
            
      <div
        aria-live="assertive"
        class="fd-list__message fd-list__message--warning"
        role="alert"
      >
        Warning message
      </div>
      
            
      <ul
        aria-labelledby="b45336C4"
        class="fd-list fd-list--has-message fd-list--dropdown fd-list--compact"
        id="s490DG4M"
        role="listbox"
        tabindex="-1"
      >
        
            
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                
          <span
            class="fd-list__title"
          >
            
                    List Item 1
                
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A1
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 2
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A2
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 3
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A3
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 4
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A4
          </span>
          
            
        </li>
        
            
      </ul>
      
        
    </div>
    
    
  </div>
  
    
  <span
    class="fd-form-message fd-form-message--static fd-form-message--warning"
  >
    Warning message
  </span>
  

    
  <br />
  
    
  <br />
  
    
  <br />
  

    
  <label
    class="fd-form-label"
    id="h45336C4"
  >
    
        Information Select Example
    
  </label>
  
    
  <br />
  
    
  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <div
        class="fd-select"
      >
        
            
        <div
          aria-controls="h83LDO23"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control is-information"
          onclick="onControlClick('hkhh998hhH');"
          role="combobox"
          tabindex="0"
        >
          
                
          <span
            class="fd-select__text-content"
          >
            Information
          </span>
          
                    
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                        
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                    
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="hkhh998hhH"
    >
      
            
      <div
        aria-live="assertive"
        class="fd-list__message fd-list__message--information"
        role="alert"
      >
        Information message
      </div>
      
            
      <ul
        aria-labelledby="h45336C4"
        class="fd-list fd-list--has-message fd-list--dropdown fd-list--compact"
        id="h83LDO23"
        role="listbox"
        tabindex="-1"
      >
        
            
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                
          <span
            class="fd-list__title"
          >
            
                    List Item 1
                
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A1
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 2
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A2
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 3
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A3
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <span
            class="fd-list__title"
          >
            List item 4
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A4
          </span>
          
            
        </li>
        
            
      </ul>
      
        
    </div>
    
    
  </div>
  
    
  <span
    class="fd-form-message fd-form-message--static fd-form-message--information"
  >
    Information message
  </span>
  

</div>
`;

exports[`Storyshots Components/Select Text Wrapping 1`] = `
<div
  style="height: 300px"
>
  
    
  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <div
        class="fd-select"
      >
        
            
        <div
          aria-controls="s12LFMR5"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control"
          onclick="onControlClick('h0GFF2325');"
          role="combobox"
          tabindex="0"
        >
          
                
          <span
            class="fd-select__text-content"
          >
            Select
          </span>
          
                
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                    
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="h0GFF2325"
    >
      
        
      <ul
        aria-labelledby="g45464A40"
        class="fd-list fd-list--dropdown"
        id="s12LFMR5"
        role="listbox"
        tabindex="-1"
      >
        
            
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
            
          <span
            class="fd-list__title"
          >
            Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text 
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            A1
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 2
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            A2
          </span>
          
        
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 3
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            A3
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            List item 4
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            A4
          </span>
          
            
        </li>
        
        
      </ul>
      
    
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Select Two Column 1`] = `
<div
  style="height: 200px"
>
  
    
  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <div
        class="fd-select"
      >
        
            
        <div
          aria-controls="a34FL7NC"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control"
          onclick="onControlClick('h0C62325');"
          role="combobox"
          tabindex="0"
        >
          
                
          <span
            class="fd-select__text-content"
          >
            Select Product
          </span>
          
                
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                    
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="h0C62325"
    >
      
        
      <ul
        aria-labelledby="f45564A59"
        class="fd-list fd-list--dropdown"
        id="a34FL7NC"
        role="listbox"
        tabindex="-1"
      >
        
            
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
            
          <span
            class="fd-list__title"
          >
            Product 1
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            1000 EUR
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            Product 2
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            750 EUR
          </span>
          
        
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            Product 3
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            780 EUR
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            Product 4
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            40 EUR
          </span>
          
            
        </li>
        
        
      </ul>
      
    
    </div>
    
    
  </div>
  
    
  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <div
        class="fd-select fd-select--compact"
      >
        
            
        <div
          aria-controls="d301CQF4"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control"
          onclick="onControlClick('h07jj326');"
          role="combobox"
          tabindex="0"
        >
          
                
          <span
            class="fd-select__text-content"
          >
            Select Product
          </span>
          
                
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                    
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="h07jj326"
    >
      
        
      <ul
        aria-labelledby="g45564A59"
        class="fd-list fd-list--dropdown fd-list--compact"
        id="d301CQF4"
        role="listbox"
        tabindex="-1"
      >
        
            
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
            
          <span
            class="fd-list__title"
          >
            Product 1
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            1000 EUR
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            Product 2
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            750 EUR
          </span>
          
        
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            Product 3
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            780 EUR
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
            
          <span
            class="fd-list__title"
          >
            Product 4
          </span>
          
            
          <span
            class="fd-list__secondary"
          >
            40 EUR
          </span>
          
            
        </li>
        
        
      </ul>
      
    
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Select Two Columns And Icons 1`] = `
<div
  style="height: 200px"
>
  
    
  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <div
        class="fd-select"
      >
        
            
        <div
          aria-controls="s45GH6Y7"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="fd-select__control"
          onclick="onControlClick('h090G325');"
          role="combobox"
          tabindex="0"
        >
          
                
          <span
            class="fd-select__text-content"
          >
            Select Product
          </span>
          
                
          <span
            class="fd-button fd-button--transparent fd-select__button"
          >
            
                    
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                
          </span>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="h090G325"
    >
      
        
      <ul
        aria-labelledby="g45564A50"
        class="fd-list fd-list--dropdown"
        id="s45GH6Y7"
        role="listbox"
        tabindex="-1"
      >
        
            
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                
          <i
            class="fd-list__icon sap-icon--marketing-campaign"
            role="presentation"
          />
          
                
          <span
            class="fd-list__title"
          >
            Marketing
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            1000 EUR
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <i
            class="fd-list__icon sap-icon--save"
            role="presentation"
          />
          
                
          <span
            class="fd-list__title"
          >
            Backups
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            500 EUR
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <i
            class="fd-list__icon sap-icon--shipping-status"
            role="presentation"
          />
          
                
          <span
            class="fd-list__title"
          >
            Shipping
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            125 EUR
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__item"
          role="option"
          tabindex="-1"
        >
          
                
          <i
            class="fd-list__icon sap-icon--headset"
            role="presentation"
          />
          
                
          <span
            class="fd-list__title"
          >
            Consulting
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            200 EUR
          </span>
          
            
        </li>
        
        
      </ul>
      
    
    </div>
    
    
  </div>
  

</div>
`;
